err/python-pydown.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/main.py'...
***   File "./lib/python3.5/site-packages/main.py", line 62
    print 'usage: pydown mdfile directory'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/markdown'...
Compiling './lib/python3.5/site-packages/markdown/__init__.py'...
***   File "./lib/python3.5/site-packages/markdown/__init__.py", line 213
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/markdown/extensions'...
Compiling './lib/python3.5/site-packages/markdown/extensions/__init__.py'...
***   File "./lib/python3.5/site-packages/markdown/extensions/__init__.py", line 49
    raise NotImplementedError, 'Extension "%s.%s" must define an "extendMarkdown"' \
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Compiling './lib/python3.5/site-packages/pygments/__init__.py'...
***   File "./lib/python3.5/site-packages/pygments/__init__.py", line 46
    except TypeError, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygments/cmdline.py'...
***   File "./lib/python3.5/site-packages/pygments/cmdline.py", line 122
    print "Help on the %s lexer:" % cls.name
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Compiling './lib/python3.5/site-packages/pygments/formatters/_mapping.py'...
***   File "./lib/python3.5/site-packages/pygments/formatters/_mapping.py", line 60
    print module_name
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pygments/formatters/html.py'...
***   File "./lib/python3.5/site-packages/pygments/formatters/html.py", line 481
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygments/formatters/latex.py'...
***   File "./lib/python3.5/site-packages/pygments/formatters/latex.py", line 309
    outfile.write(ur'\begin{Verbatim}[commandchars=\\\{\}')
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygments/lexer.py'...
***   File "./lib/python3.5/site-packages/pygments/lexer.py", line 436
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygments/lexers'...
Compiling './lib/python3.5/site-packages/pygments/lexers/_luabuiltins.py'...
***   File "./lib/python3.5/site-packages/pygments/lexers/_luabuiltins.py", line 236
    print '> Downloading function index for Lua %s' % version
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pygments/lexers/_mapping.py'...
***   File "./lib/python3.5/site-packages/pygments/lexers/_mapping.py", line 288
    print module_name
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pygments/lexers/_phpbuiltins.py'...
***   File "./lib/python3.5/site-packages/pygments/lexers/_phpbuiltins.py", line 3780
    print '>> Downloading Function Index'
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pygments/lexers/_sourcemodbuiltins.py'...
***   File "./lib/python3.5/site-packages/pygments/lexers/_sourcemodbuiltins.py", line 1060
    print '> Downloading function index for SourceMod %s' % version
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pygments/lexers/agile.py'...
***   File "./lib/python3.5/site-packages/pygments/lexers/agile.py", line 346
    re.match(ur'  File "[^"]+", line \d+\n$', line)):
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygments/lexers/jvm.py'...
***   File "./lib/python3.5/site-packages/pygments/lexers/jvm.py", line 140
    idrest = ur'%s(?:%s|[0-9])*(?:(?<=_)%s)?' % (letter, letter, op)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygments/lexers/other.py'...
***   File "./lib/python3.5/site-packages/pygments/lexers/other.py", line 1149
    (ur'¬\n', String.Escape),
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pygments/lexers/web.py'...
***   File "./lib/python3.5/site-packages/pygments/lexers/web.py", line 2670
    (ur'\t|\r|\n|[\u0020-\uD7FF]|[\uE000-\uFFFD]|' +
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/python_pydown-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/templates'...
Listing './lib/python3.5/site-packages/templates/css'...
Listing './lib/python3.5/site-packages/templates/js'...
Listing './share'...
Listing './share/python-wheels'...
